--- a/server/pom.xml
+++ b/server/pom.xml
@@ -43,6 +43,18 @@
       <artifactId>lombok</artifactId>
       <optional>true</optional>
     </dependency>
+    <!-- springdoc -->
+    <dependency>
+      <groupId>org.springdoc</groupId>
+      <artifactId>springdoc-openapi-starter-webmvc-api</artifactId>
+      <version>2.0.4</version>
+    </dependency>
+    <!-- swagger 第三方 ui -->
+    <dependency>
+      <groupId>com.github.xiaoymin</groupId>
+      <artifactId>knife4j-openapi3-jakarta-spring-boot-starter</artifactId>
+      <version>4.1.0</version>
+    </dependency>
   </dependencies>
 
   <build>
