chore: 添加依赖：spring-security、jwt

--- a/server/pom.xml
+++ b/server/pom.xml
@@ -55,6 +55,17 @@
       <artifactId>knife4j-openapi3-jakarta-spring-boot-starter</artifactId>
       <version>4.1.0</version>
     </dependency>
+    <!-- security -->
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-security</artifactId>
+    </dependency>
+    <!-- JWT -->
+    <dependency>
+      <groupId>io.jsonwebtoken</groupId>
+      <artifactId>jjwt</artifactId>
+      <version>0.9.1</version>
+    </dependency>
   </dependencies>
 
   <build>
