--- a/server/pom.xml
+++ b/server/pom.xml
@@ -15,6 +15,8 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <docker.image.name>stcos-server</docker.image.name>
+    <docker.image.tag>backend</docker.image.tag>
   </properties>
 
   <dependencies>
@@ -67,6 +69,7 @@
       <artifactId>jjwt</artifactId>
       <version>0.9.1</version>
     </dependency>
+
   </dependencies>
 
   <build>
@@ -76,6 +79,47 @@
         <artifactId>spring-boot-maven-plugin</artifactId>
         <configuration>
           <addResources>true</addResources>
+        </configuration>
+      </plugin>
+
+      <!-- We use the Resources plugin to filer Dockerfile and run.sh, it inserts actual JAR filename -->
+      <!-- The final Dockerfile will be created in target/dockerfile/Dockerfile -->
+      <plugin>
+        <artifactId>maven-resources-plugin</artifactId>
+        <executions>
+          <execution>
+            <id>copy-resources</id>
+            <!-- here the phase you need -->
+            <phase>validate</phase>
+            <goals>
+              <goal>copy-resources</goal>
+            </goals>
+            <configuration>
+              <outputDirectory>${basedir}/target/dockerfile</outputDirectory>
+              <resources>
+                <resource>
+                  <directory>src/main/docker</directory>
+                  <filtering>true</filtering>
+                </resource>
+              </resources>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
+      <plugin>
+        <groupId>com.spotify</groupId>
+        <artifactId>docker-maven-plugin</artifactId>
+        <version>0.4.10</version>
+        <configuration>
+          <imageName>${docker.image.name}:${docker.image.tag}</imageName>
+          <dockerDirectory>${basedir}/target/dockerfile</dockerDirectory>
+          <resources>
+            <resource>
+              <targetPath>/</targetPath>
+              <directory>${project.build.directory}</directory>
+              <include>${project.build.finalName}.jar</include>
+            </resource>
+          </resources>
         </configuration>
       </plugin>
     </plugins>
