--- a/server/src/main/resources/application.yml
+++ b/server/src/main/resources/application.yml
@@ -19,3 +19,14 @@ knife4j:
   enable: true
   setting:
     language: zh_cn
+
+spring:
+#配置数据源信息
+    datasource:
+      #配置数据源结构类型
+      type: com.zaxxer.hikari.HikariDataSource
+      #数据库链接信息配置
+      driver-class-name: com.mysql.cj.jdbc.Driver
+      url: jdbc:mysql://localhost:3306/mybatis_plus?serverTimezone=GMT%2B8&characterEncoding=utf-8&userSSL=false
+      username: root
+      password: 546995zxc---
