--- a/server/pom.xml
+++ b/server/pom.xml
@@ -27,6 +27,12 @@
       <version>4.13.2</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-test</artifactId>
+      <version>3.0.5</version>
+      <scope>test</scope>
+    </dependency>
     <!-- web -->
     <dependency>
       <groupId>org.springframework.boot</groupId>
@@ -51,7 +57,6 @@
       <artifactId>springdoc-openapi-starter-webmvc-api</artifactId>
       <version>2.0.4</version>
     </dependency>
-
     <!-- swagger 第三方 ui -->
     <dependency>
       <groupId>com.github.xiaoymin</groupId>
@@ -69,8 +74,30 @@
       <artifactId>jjwt</artifactId>
       <version>0.9.1</version>
     </dependency>
+    <!-- MyBatis-Plus -->
+    <dependency>
+      <groupId>com.baomidou</groupId>
+      <artifactId>mybatis-plus-boot-starter</artifactId>
+      <version>3.5.2</version>
+    </dependency>
+    <!-- mybatis-plus-generator -->
+    <dependency>
+      <groupId>com.baomidou</groupId>
+      <artifactId>mybatis-plus-generator</artifactId>
+      <version>3.5.2</version>
+    </dependency>
+    <!-- MySQL -->
+    <dependency>
+      <groupId>com.mysql</groupId>
+      <artifactId>mysql-connector-j</artifactId>
+      <version>8.0.32</version>
+      <scope>runtime</scope>
+    </dependency>
 
-  </dependencies>
+
+
+    </dependencies>
+
 
   <build>
     <plugins>
