--- a/server/src/main/resources/application.yml
+++ b/server/src/main/resources/application.yml
@@ -19,3 +19,13 @@ knife4j:
   enable: true
   setting:
     language: zh_cn
+
+jwt:
+  # JWT 存储的请求头
+  tokenHeader: Authorization
+  # JWT 加解密使用的密钥
+  secret: kekwy-secret
+  # JWT 的超期限时间（60*60*24）
+  expiration: 604800
+  # JWT 负载中拿到开头
+  tokenHead: Bearer
