--- a/server/src/main/resources/application.yml
+++ b/server/src/main/resources/application.yml
@@ -27,6 +27,6 @@ spring:
       type: com.zaxxer.hikari.HikariDataSource
       #数据库链接信息配置
       driver-class-name: com.mysql.cj.jdbc.Driver
-      url: jdbc:mysql://localhost:3306/mybatis_plus?serverTimezone=GMT%2B8&characterEncoding=utf-8&userSSL=false
+      url: jdbc:mysql://localhost:3306/mybatis_plus_test?serverTimezone=GMT%2B8&characterEncoding=utf-8&userSSL=false
       username: root
       password: 546995zxc---
