--- a/server/pom.xml
+++ b/server/pom.xml
@@ -69,6 +69,14 @@
       <artifactId>jjwt</artifactId>
       <version>0.9.1</version>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/org.flowable/flowable-spring-boot-starter -->
+    <dependency>
+      <groupId>org.flowable</groupId>
+      <artifactId>flowable-spring-boot-starter</artifactId>
+      <version>6.8.0</version>
+    </dependency>
+
+
 
   </dependencies>
 
