--- a/server/pom.xml
+++ b/server/pom.xml
@@ -17,6 +17,7 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <docker.image.name>stcos-server</docker.image.name>
     <docker.image.tag>backend</docker.image.tag>
+    <spring.boot.version>3.0.5</spring.boot.version>
   </properties>
 
   <dependencies>
@@ -31,11 +32,13 @@
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-web</artifactId>
+      <version>${spring.boot.version}</version>
     </dependency>
     <!-- spring-devtools -->
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-devtools</artifactId>
+      <version>${spring.boot.version}</version>
       <scope>runtime</scope>
       <optional>true</optional>
     </dependency>
@@ -62,6 +65,7 @@
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-security</artifactId>
+      <version>${spring.boot.version}</version>
     </dependency>
     <!-- JWT -->
     <dependency>
@@ -69,12 +73,26 @@
       <artifactId>jjwt</artifactId>
       <version>0.9.1</version>
     </dependency>
+    <!-- MySQL -->
+    <dependency>
+      <groupId>com.mysql</groupId>
+      <artifactId>mysql-connector-j</artifactId>
+      <version>8.0.32</version>
+      <scope>runtime</scope>
+    </dependency>
     <!-- https://mvnrepository.com/artifact/org.flowable/flowable-spring-boot-starter -->
     <dependency>
       <groupId>org.flowable</groupId>
       <artifactId>flowable-spring-boot-starter</artifactId>
-      <version>6.8.0</version>
+      <version>7.0.0.M1</version>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/com.baomidou/dynamic-datasource-spring-boot-starter -->
+    <dependency>
+      <groupId>com.baomidou</groupId>
+      <artifactId>dynamic-datasource-spring-boot-starter</artifactId>
+      <version>3.6.1</version>
+    </dependency>
+
 
 
 
