--- a/server/pom.xml
+++ b/server/pom.xml
@@ -107,6 +107,11 @@
       <artifactId>spring-boot-starter-actuator</artifactId>
     </dependency>
 
+    <dependency>
+      <groupId>javax.xml.bind</groupId>
+      <artifactId>jaxb-api</artifactId>
+      <version>2.4.0-b180830.0359</version>
+    </dependency>
   </dependencies>
 
   <build>
