--- a/server/src/main/resources/application.yml
+++ b/server/src/main/resources/application.yml
@@ -63,6 +63,6 @@ flowable:
   datasource:
     type: com.zaxxer.hikari.HikariDataSource
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/flowable_demo?serverTimezone=UTC&nullCatalogMeansCurrent=true
-    username: flowable_demo
-    password:
+    url: jdbc:mysql://masterchedan.top:3306/flowable_demo?serverTimezone=UTC&nullCatalogMeansCurrent=true
+    username: stcos
+    password: stcosgroupa
