feat: 添加 openapi 文档自动化生成模块

--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
     <description>backend</description>
     <modules>
         <module>server</module>
+      <module>api</module>
     </modules>
 
     <packaging>pom</packaging>
