--- a/server/pom.xml
+++ b/server/pom.xml
@@ -106,7 +106,12 @@
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-actuator</artifactId>
     </dependency>
-
+    <!-- 引入项目中的 API 定义 -->
+    <dependency>
+      <groupId>com.stcos</groupId>
+      <artifactId>openapi</artifactId>
+      <version>0.0.1-SNAPSHOT</version>
+    </dependency>
     <dependency>
       <groupId>javax.xml.bind</groupId>
       <artifactId>jaxb-api</artifactId>
