--- a/openapi/pom.xml
+++ b/openapi/pom.xml
@@ -37,13 +37,26 @@
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-validation</artifactId>
     </dependency>
-    <!-- https://mvnrepository.com/artifact/org.openapitools/openapi-generator-maven-plugin -->
+    <!-- https://mvnrepository.com/artifact/javax.validation/validation-api -->
     <dependency>
-      <groupId>org.openapitools</groupId>
-      <artifactId>openapi-generator-maven-plugin</artifactId>
-      <version>6.5.0</version>
+      <groupId>javax.validation</groupId>
+      <artifactId>validation-api</artifactId>
+      <version>2.0.1.Final</version>
+    </dependency>
+    <!-- https://mvnrepository.com/artifact/javax.annotation/javax.annotation-api -->
+    <dependency>
+      <groupId>javax.annotation</groupId>
+      <artifactId>javax.annotation-api</artifactId>
+      <version>1.3.2</version>
+    </dependency>
+    <!-- https://mvnrepository.com/artifact/javax.servlet/javax.servlet-api -->
+    <dependency>
+      <groupId>javax.servlet</groupId>
+      <artifactId>javax.servlet-api</artifactId>
+      <version>4.0.1</version>
       <scope>provided</scope>
     </dependency>
+
   </dependencies>
 
   <build>
@@ -51,13 +64,20 @@
       <plugin>
         <groupId>org.openapitools</groupId>
         <artifactId>openapi-generator-maven-plugin</artifactId>
+        <version>6.5.0</version>
         <configuration>
+          <generatorName>spring</generatorName>
+          <library>spring-boot</library>
+          <configOptions>
+            <groupSameCtrlName>true</groupSameCtrlName>
+            <interfaceOnly>true</interfaceOnly>
+          </configOptions>
           <inputSpec>
             ${project.basedir}/src/openapi.yaml
           </inputSpec>
           <modelNameSuffix>Dto</modelNameSuffix>
-          <apiPackage>com.stcos.api</apiPackage>
-          <modelPackage>com.stcos.dto</modelPackage>
+          <apiPackage>com.stcos.server.controller.api</apiPackage>
+          <modelPackage>com.stcos.server.model.dto</modelPackage>
         </configuration>
       </plugin>
     </plugins>
