--- a/server/pom.xml
+++ b/server/pom.xml
@@ -130,6 +130,12 @@
       <artifactId>jaxb-api</artifactId>
       <version>2.4.0-b180830.0359</version>
     </dependency>
+
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-mail</artifactId>
+      <version>${spring.boot.version}</version>
+    </dependency>
   </dependencies>
 
   <build>
