feat：初步实现文档的存储管理 Closes #9

--- a/server/pom.xml
+++ b/server/pom.xml
@@ -142,6 +142,11 @@
       <artifactId>spring-boot-starter-mail</artifactId>
       <version>${spring.boot.version}</version>
     </dependency>
+    <!--Java操作MongoDB-->
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-data-mongodb</artifactId>
+    </dependency>
   </dependencies>
 
   <build>
