--- a/server/src/main/resources/application.yml
+++ b/server/src/main/resources/application.yml
@@ -51,8 +51,8 @@ spring:
     #      username: stcos
     #      password: stcosgroupa
     url: jdbc:mysql://localhost:3306/stcos?serverTimezone=GMT%2B8&characterEncoding=utf-8&autoReconnect=true&useSSL=false&allowPublicKeyRetrieval=true
-    username: demo
-    password:
+    username: root
+    password: 546995zxc---
   mail:
     # 使用 smtp 协议
     protocol: smtp
@@ -80,6 +80,8 @@ jwt:
 
 # MyBatis配置
 mybatis-plus:
+  # mapper相关xml文件存储位置
+  mapper-locations: classpath:mapper/*.xml
   configuration:
     # 开启自动提交事务
     default-executor-type: SIMPLE
@@ -108,8 +110,8 @@ flowable:
     url: jdbc:mysql://localhost:3306/flowable_demo?serverTimezone=UTC&nullCatalogMeansCurrent=true
     #    username: stcos
     #    password: stcosgroupa
-    username: flowable_demo
-    password:
+    username: root
+    password: 546995zxc---
 
 file:
   upload:
