feat: 完善任务监听器，修正用户申请表审核信息部分的数据结构字段名

--- a/server/src/main/resources/application.yml
+++ b/server/src/main/resources/application.yml
@@ -78,6 +78,7 @@ jwt:
   # JWT 负载中拿到开头
   tokenHead: Bearer
 
+
 # MyBatis配置
 mybatis-plus:
   # mapper相关xml文件存储位置
@@ -87,7 +88,8 @@ mybatis-plus:
     # 开启自动提交事务
     default-executor-type: SIMPLE
     # 配置MyBatis日志文件
-    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
+#    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
+    log-impl: org.apache.ibatis.logging.nologging.NoLoggingImpl
 
   # 设置MyBatis-Plus的全局配置
   global-config:
@@ -117,3 +119,7 @@ flowable:
 file:
   upload:
     directory: "./temp"
+#logging:
+#  level:
+#    org.apache.ibatis: WARN
+#    sql: warn
