--- a/server/pom.xml
+++ b/server/pom.xml
@@ -20,6 +20,7 @@
     <spring.boot.version>3.0.5</spring.boot.version>
   </properties>
 
+
   <dependencies>
     <!-- 单元测试 -->
     <dependency>
@@ -192,7 +193,11 @@
       <artifactId>font-asian</artifactId>
       <version>7.0.4</version>
     </dependency>
-
+    <dependency>
+      <groupId>org.apache.poi</groupId>
+      <artifactId>poi-ooxml</artifactId>
+      <version>5.2.3</version>
+    </dependency>
   </dependencies>
 
   <build>
