fix: 修复了表单字段与前端不一致的问题

--- a/server/src/main/resources/application.yml
+++ b/server/src/main/resources/application.yml
@@ -67,6 +67,10 @@ spring:
       debug: false
       mime.splitlongparameters: false
     default-encoding: UTF-8
+  servlet:
+    multipart:
+      max-file-size: 300MB
+      max-request-size: 500MB
 
 jwt:
   # JWT 存储的请求头
