--- a/server/pom.xml
+++ b/server/pom.xml
@@ -219,6 +219,12 @@
       <artifactId>documents4j-transformer-msoffice-word</artifactId>
       <version>1.0.3</version>
     </dependency>
+      <dependency>
+          <groupId>org.openapitools</groupId>
+          <artifactId>jackson-databind-nullable</artifactId>
+          <version>0.2.6</version>
+          <scope>compile</scope>
+      </dependency>
   </dependencies>
 
   <build>
