--- a/server/src/main/resources/application.yml
+++ b/server/src/main/resources/application.yml
@@ -50,9 +50,9 @@ spring:
     #      url: jdbc:mysql://masterchedan.top:3306/stcos?serverTimezone=GMT%2B8&characterEncoding=utf-8&userSSL=false
     #      username: stcos
     #      password: stcosgroupa
-    url: jdbc:mysql://localhost:3306/stcos?serverTimezone=GMT%2B8&characterEncoding=utf-8&autoReconnect=true&useSSL=false&allowPublicKeyRetrieval=true
-    username: demo
-    password:
+    url: jdbc:mysql://localhost:3306/stcos?serverTimezone=GMT%2B8&characterEncoding=utf-8&autoReconnect=true&useSSL=false&allowPublicKeyRetrieval=true&allowMultiQueries=true
+    username: root
+    password: root
   mail:
     # 使用 smtp 协议
     protocol: smtp
@@ -117,8 +117,8 @@ flowable:
     url: jdbc:mysql://localhost:3306/flowable_demo?serverTimezone=UTC&nullCatalogMeansCurrent=true
     #    username: stcos
     #    password: stcosgroupa
-    username: flowable_demo
-    password:
+    username: root
+    password: root
 
 file:
   upload:
