--- a/server/pom.xml
+++ b/server/pom.xml
@@ -225,6 +225,18 @@
           <version>0.2.6</version>
           <scope>compile</scope>
       </dependency>
+      <dependency>
+          <groupId>com.stcos</groupId>
+          <artifactId>openapi</artifactId>
+          <version>0.0.1-SNAPSHOT</version>
+          <scope>compile</scope>
+      </dependency>
+    <dependency>
+      <groupId>com.stcos</groupId>
+      <artifactId>openapi</artifactId>
+      <version>0.0.1-SNAPSHOT</version>
+      <scope>compile</scope>
+    </dependency>
   </dependencies>
 
   <build>
