--- a/server/src/main/resources/application.yml
+++ b/server/src/main/resources/application.yml
@@ -51,8 +51,8 @@ spring:
     #      username: stcos
     #      password: stcosgroupa
     url: jdbc:mysql://localhost:3306/stcos?serverTimezone=GMT%2B8&characterEncoding=utf-8&autoReconnect=true&useSSL=false&allowPublicKeyRetrieval=true&allowMultiQueries=true
-    username: root
-    password: root
+    username: demo
+    password:
   mail:
     # 使用 smtp 协议
     protocol: smtp
@@ -117,8 +117,8 @@ flowable:
     url: jdbc:mysql://localhost:3306/flowable_demo?serverTimezone=UTC&nullCatalogMeansCurrent=true
     #    username: stcos
     #    password: stcosgroupa
-    username: root
-    password: root
+    username: flowable_demo
+    password:
 
 file:
   upload:
